# NeuralCore

./: .gitignore  .gitmodules  README.md  install.sh  pyproject.toml
data/: config.yaml  lab_experiment_report.md  multi_agent_test_config.yaml  test_config.yaml
data/examples/tools/: file_set.py
data/examples/workflows/: default_flow.py
data/kb/: index.json
data/models/: agent_002_knowledge_consolidator_ltr.txt
docs/: workflow.md
docs/experiments/: GVRMod_Codebase_Investigation_Report.md  NeuralCore_Codebase_Investigation_Report.md  NeuralVoid_Codebase_Investigation_Report.md  neuroscience-memory-audit-2026-04-12.md  neuroscience-memory-audit-2026-04-13.md  neuroscience-memory-audit-2026-04-19.md  neuroscience-memory-audit-2026-04-21-1.md  neuroscience-memory-audit-2026-04-21-2.md  neuroscience-memory-audit-2026-04-21.md
src/actions/: registry.py
src/cognition/: memory.py
src/neuralcore/: __init__.py
src/neuralcore/actions/: __init__.py  actions.py  decisions.py  manager.py  registry.py  sequence.py
src/neuralcore/agents/: __init__.py  agent_core.py  core.py  engine.py  factory.py  flow.py  state.py  task.py
src/neuralcore/bridge/: __init__.py  websocket.py
src/neuralcore/clients/: __init__.py  client.py  factory.py
src/neuralcore/cognition/: __init__.py  consolidator.py  items.py  knowledge.py  memory.py
src/neuralcore/core/: client.py  client_factory.py  prompt_builder.py
src/neuralcore/tasks/: helpers.py  manager.py  task.py
src/utils/: exceptions_handler.py  file_utils.py  logger.py  search.py
tests/: conftest.py  mock_llm_server.py  test_actions.py  test_agent_integration.py  test_agent_state.py  test_client_factory.py  test_cognition_items.py  test_config.py  test_context_manager.py  test_fastembedd.py  test_formatting.py  test_llm_client.py  test_mock_server.py  test_prompt_builder.py  test_search.py  test_task.py  test_tokenizer.py  test_workflow_registry.py
tests/advanced/: __init__.py  conftest.py  mock_llm_server.py  test_agent_cooperation.py  test_agent_integration.py  test_config.yaml
tests/labs/: lab_config.yaml  lab_experiment.py  lab_mock_server.py
tests/test_tools/: test_toolset.py
(+26 files in other folders)
