[project]
name = "neuralcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Abyss-c0re", email = "dev@abyss-core.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncio>=4.0.0",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "rapidfuzz>=3.14.3",
    "tokenizers>=0.22.2",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0", "toml"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
