[project]
name = "neuralcore"
version = "0.1.0"
description = "NeuralCore framework for AI applications"
readme = "README.md"
authors = [
    { name = "Abyss-c0re", email = "dev@abyss-core.com" }
]
requires-python = ">=3.14"

# Runtime dependencies
dependencies = [
    "aiofiles>=25.1.0",
    "fastembed>=0.8.0",
    "lightgbm>=4.6.0",
    "numpy>=2.4.3",
    "openai>=2.28.0",
    "pandas>=3.0.2",
    "pillow>=12.1.1",
    "pypdf>=6.10.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "tokenizers>=0.22.2",
    "websockets>=16.0",
]

# Optional dev dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "black>=24.3.0"
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.pyright]
venvPath = "."
venv = ".venv"
